src/z80asm/z80asm2/t/45-symbols/expected/decl_matrix_10E.txt
% z88dk-z80asm -v -dump-after-symbol-collection t/45-symbols//input/decl_matrix_10E.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/45-symbols/input/decl_matrix_10E.asm...
t/45-symbols/input/decl_matrix_10E.asm:2:11: error: Undefined symbol: x
        ld a,(x)
              ^
Assembly completed with 1 error
